# SyncDetail

./: build.sh  db.py  inotify-indexer  inotify-indexer.spec  install_deps.sh  main.py  pyproject.toml  qb.py  requirements.txt  setup_venv.sh  watcher.py
app/: config.py  db.py  moviepilot.py  scanner.py  setup.py  watcher.py
inotify_indexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
